<resources>
    <string name="app_name">Registration App</string>
    <string name="username">Username</string>
    <string name="add_username">Add your username</string>
    <string name="password">Password</string>
    <string name="add_password">Add your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="accessibility_login_area">Login Area</string>
    <string name="accessibility_logo">logo</string>

    <string name="registration_form">Registration form</string>
    <string name="email">Email</string>
    <string name="add_email">Add your email</string>
    <string name="confirm_password">Confirm the password</string>
    <string name="register_now">Register now</string>
    
    <string name="every_day_is_">Every day is</string>
    <string name="sun">Sun</string>
    <string name="day">day</string>
    <string name="generate_random_picture">Generate random picture</string>
    <string name="my_library">My library</string>
    <string name="share_app">Share app</string>
    <string name="log_out">Log out</string>
    <string name="go_back_home">Go back home</string>

</resources>