<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.myapplication.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/appbarBackground"
            android:layout_width="0dp"
            android:layout_height="115dp"
            android:src="@drawable/ic_login_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_form"
            android:textAppearance="@style/registrationForm"
            app:layout_constraintBottom_toBottomOf="@+id/appbarBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appbarBackground" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="35dp"
            android:textAppearance="@style/usernamePassword"
            android:textColor="@color/ocean_main"
            app:layout_constraintStart_toStartOf="@+id/editTextName"
            app:layout_constraintTop_toBottomOf="@+id/appbarBackground" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/edittext_register_background"
            android:hint="@string/add_username"
            android:layout_marginHorizontal="55dp"
            android:layout_marginTop="11dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="#C4C4C4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            android:inputType="text" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="@style/usernamePassword"
            android:textColor="@color/ocean_main"
            android:layout_marginTop="23dp"
            app:layout_constraintStart_toStartOf="@+id/emailEditText"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="55dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/edittext_register_background"
            android:hint="@string/add_email"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="#C4C4C4"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="@style/usernamePassword"
            android:textColor="@color/ocean_main"
            android:layout_marginTop="23dp"
            app:layout_constraintStart_toStartOf="@+id/passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="55dp"
            android:background="@drawable/edittext_register_background"
            android:hint="@string/add_password"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="#C4C4C4"
            android:layout_marginTop="11dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textAppearance="@style/usernamePassword"
            android:textColor="@color/ocean_main"
            android:layout_marginTop="23dp"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordEditText"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="55dp"
            android:background="@drawable/edittext_register_background"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="#C4C4C4"
            android:layout_marginTop="11dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

        <Button
            android:id="@+id/registerMow"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="55dp"
            android:layout_marginTop="42dp"
            android:backgroundTint="@color/yello_main"
            android:text="@string/register_now"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>