<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.myapplication.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/appbarBackground"
            android:layout_width="0dp"
            android:layout_height="115dp"
            android:contentDescription="@string/accessibility_login_area"
            android:scaleType="fitXY"
            android:src="@drawable/ic_login_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/everyDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/every_day_is_"
            android:textAppearance="@style/registrationForm"
            app:layout_constraintBottom_toBottomOf="@+id/appbarBackground"
            app:layout_constraintEnd_toStartOf="@+id/sun"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appbarBackground" />

        <TextView
            android:id="@+id/sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            android:textAppearance="@style/registrationForm"
            android:textColor="@color/yello_main"
            app:layout_constraintBottom_toBottomOf="@+id/appbarBackground"
            app:layout_constraintEnd_toStartOf="@+id/day"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/everyDay"
            app:layout_constraintTop_toTopOf="@+id/appbarBackground" />

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textAppearance="@style/registrationForm"
            app:layout_constraintBottom_toBottomOf="@+id/appbarBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sun"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/generate"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="55dp"
            android:backgroundTint="@color/yello_main"
            android:text="@string/generate_random_picture"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@+id/library"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbarBackground"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/library"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="55dp"
            android:backgroundTint="@color/yello_main"
            android:text="@string/my_library"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@+id/share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generate" />

        <Button
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="55dp"
            android:backgroundTint="@color/yello_main"
            android:text="@string/share_app"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@+id/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/library" />

        <Button
            android:id="@+id/logout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="55dp"
            android:backgroundTint="@color/yello_main"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share" />

        <ImageView
            android:id="@+id/bottomBackground"
            android:layout_width="0dp"
            android:layout_height="115dp"
            android:src="@color/ocean_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:src="@drawable/ic_duck"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>